# APITaxi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO  api_taxi.uwsgi  api_taxi.wsgi  backoffice_operateurs.wsgi  celery_worker.py  circle.yml  default_settings.py  install_krmt.sh  install_redis.sh  install_yajl.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
APITaxi/: __init__.py  default_settings.py  extensions.py  index_zupc.py  test_settings.py  tests_settings.py  user_datastore.py
APITaxi/api/: __init__.py  ads.py  customer.py  documents.py  drivers.py  extensions.py  hail.py  healthcheck.py  healthchecks.py  profile.py  taxi.py  users.py  vehicle.py  waiting_time.py  zupc.py
APITaxi/backoffice/: __init__.py  ads.py  dash.py  drivers.py  extensions.py  home.py  operateur.py  profile.py  user_key.py  vehicle.py  zupc.py
APITaxi/commands/: __init__.py  active_tasks.py  add_missing_stats.py  create_influx_db.py  create_user.py  export_taxis.py  import_zupc.py  load_zupc.py  remove_old_ads.py  warm_up_redis.py
APITaxi/demo/: __init__.py
APITaxi/descriptors/: __init__.py  ads.py  common.py  customer.py  drivers.py  hail.py  taxi.py  vehicle.py  waiting_time.py
APITaxi/documentation/: __init__.py  examples.py  index.py  moteur.py  operateur.py  reference.py  stats.py
APITaxi/forms/: __init__.py  administrative.py  login.py  taxis.py  user.py
APITaxi/models/: __init__.py  administrative.py  driver_languages.py  hail.py  security.py  stats.py  taxis.py  vehicle.py
APITaxi/static/: swagger.json
APITaxi/tasks/: __init__.py  clean_geoindex.py  clean_geoindex_timestamps.py  clean_timestamps.py  healthchecks.py  make_views.py  send_request_operator.py
APITaxi/templates/: base.html  dash.html  stats.html  swagger.json  test_carte.html  user.html
APITaxi/tests/: ads_tests.py  drivers_tests.py  fake_data.py  hail_tests.py  skeleton.py  taxis_tests.py  vehicles_tests.py
APITaxi/utils/: __init__.py  api.py  arguments.py  cache_refresh.py  cache_user_datastore.py  caching.py  fields.py  influx_db.py  login_formless.py  login_manager.py  make_model.py  mixins.py  model_form.py  msgpack_backend.py  populate_obj.py  redis_geo.py  refresh_db.py  representations.py  request_wants_json.py  resource_metadata.py  scoped_session.py  slack.py  validate_json.py
APITaxi/views/: __init__.py  ads.py  conducteur.py  drivers.py  hail.py  home.py  taxi.py  user_key.py  vehicle.py  zupc.py
APITaxi2/: __init__.py  activity_logs.py  celery_worker.py  clean_db.py  debug.py  default_settings.py  exclusions.py  influx_backend.py  middlewares.py  redis_backend.py  schemas.py  security.py  stats_backend.py  tasks.py  utils.py  validators.py  worker.py
APITaxi2/commands/: 2020.yaml  clean_ads.py  clean_db.py  client.py  debug_stations.py  exclusion.py  hails.py  redis.py  report.py  service.py  stations.py  towns.py  users.py  zupc.py
APITaxi_models2/: __init__.py  activity_logs.py  ads.py  alembic.ini  customer.py  departement.py  driver.py  gare.py  hail.py  influxdb.py  mixins.py  station.py  stats.py  taxi.py  user.py  vehicle.py  zupc.py
backoffice_operateurs/: __init__.py  default_settings.py  dev_settings.py  manage.py
devenv/: entrypoint.sh
migrations/: env.py
scripts/: conf_example
services/: uwsgi.conf
tests/: ads_tests.py  customer_tests.py  drivers_tests.py  fake_data.py  hail_tests.py  operateur_server.py  skeleton.py  taxis_tests.py  users_tests.py  vehicles_tests.py  zupc_tests.py
uploads/: 158dc526-7b82-41b4-af07-4e49a8dfc2a6
(+274 files in other folders)
